RESOLVED FIXED215298
Off by one error in transform feedback buffer binding
https://bugs.webkit.org/show_bug.cgi?id=215298
Summary Off by one error in transform feedback buffer binding
James Darpinian
Reported 2020-08-07 16:04:06 PDT
Off by one error in transform feedback buffer binding
Attachments
Patch (1.58 KB, patch)
2020-08-07 16:05 PDT, James Darpinian
no flags
James Darpinian
Comment 1 2020-08-07 16:05:17 PDT
Kenneth Russell
Comment 2 2020-08-07 16:07:09 PDT
Comment on attachment 406224 [details] Patch Looks good to me. I'd r+ but my reviewer status hasn't been reinstated.
Chris Dumez
Comment 3 2020-08-07 16:08:00 PDT
Comment on attachment 406224 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406224&action=review > Source/WebCore/ChangeLog:8 > + Caught by conformance test deqp/functional/gles3/negativebufferapi.html This change is missing a test.
James Darpinian
Comment 4 2020-08-07 16:19:27 PDT
Comment on attachment 406224 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406224&action=review >> Source/WebCore/ChangeLog:8 >> + Caught by conformance test deqp/functional/gles3/negativebufferapi.html > > This change is missing a test. The test is present. The suite it's in (deqp) is currently skipped in the test expectations because it takes a long time to run. I'm looking into whether we can make it faster.
Dean Jackson
Comment 5 2020-08-07 16:31:48 PDT
Comment on attachment 406224 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406224&action=review >>> Source/WebCore/ChangeLog:8 >>> + Caught by conformance test deqp/functional/gles3/negativebufferapi.html >> >> This change is missing a test. > > The test is present. The suite it's in (deqp) is currently skipped in the test expectations because it takes a long time to run. I'm looking into whether we can make it faster. We have a separate bot that runs the deqp tests.
EWS
Comment 6 2020-08-07 16:56:34 PDT
Committed r265399: <https://trac.webkit.org/changeset/265399> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406224 [details].
Radar WebKit Bug Importer
Comment 7 2020-08-07 16:57:18 PDT
Note You need to log in before you can comment on or make changes to this bug.