Off by one error in transform feedback buffer binding https://bugs.webkit.org/show_bug.cgi?id=215298

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-08-07
Reviewed by Dean Jackson.

Caught by conformance test deqp/functional/gles3/negativebufferapi.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::setIndexedBufferBinding):

Canonical link: https://commits.webkit.org/228077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265399 268f45cc-cd09-0410-ab3c-d52691b4dbfc